--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -9,8 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:padding="10px"
-        android:paddingLeft="20px"
-        android:text="Sugar" />
+        android:paddingLeft="20px" />
 
     <TextView
         android:id="@+id/ingredient_quantity"
@@ -19,7 +18,6 @@
         android:layout_alignParentRight="true"
         android:padding="10px"
         android:paddingRight="20px"
-        android:textStyle="bold"
-        android:text="1 cup" />
+        android:textStyle="bold" />
 
 </RelativeLayout>
