--- a/app/src/main/res/layout/recipe_detail_layout.xml
+++ b/app/src/main/res/layout/recipe_detail_layout.xml
@@ -29,6 +29,8 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="147dp"
             android:layout_marginRight="147dp"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
             android:text="Recipe title"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
