Updated to new version
1. Shopping list feature
2. Change floating action button layout

--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -25,7 +25,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/shop_item_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Recipe name" />
