--- a/app/src/main/res/layout/dialog_add_shopping_item.xml
+++ b/app/src/main/res/layout/dialog_add_shopping_item.xml
@@ -10,9 +10,16 @@
         android:scaleType="center"
         android:background="#FFFFBB33"
         android:contentDescription="@string/app_name" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Item name:" />
+
     <EditText
-        android:id="@+id/username"
-        android:inputType="textEmailAddress"
+        android:id="@+id/itemTitleEditText"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -20,9 +27,16 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:hint="" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Quantity:" />
+
     <EditText
-        android:id="@+id/password"
-        android:inputType="textPassword"
+        android:id="@+id/itemQuantEditText"
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
