Recipe detail page update
1. Add padding for ingredient listview
2. Disable scrollbars of ingredient listview
3. Make recipe title clickable and redirects to its website

--- a/app/src/main/res/layout/recipe_detail_layout.xml
+++ b/app/src/main/res/layout/recipe_detail_layout.xml
@@ -80,8 +80,8 @@
             android:id="@+id/serving_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
-            android:layout_marginLeft="150dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/serving_title" />
@@ -103,8 +103,8 @@
             android:id="@+id/calorie_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
-            android:layout_marginLeft="150dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/calorie_title" />
@@ -132,6 +132,8 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:clickable="false"
+            android:paddingBottom="20dp"
+            android:scrollbars="none"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ingredient_title" />
