--- a/app/src/main/res/layout/dialog_add_shopping_item.xml
+++ b/app/src/main/res/layout/dialog_add_shopping_item.xml
@@ -3,13 +3,14 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    <ImageView
-        android:src="@drawable/ic_launcher_foreground"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:scaleType="center"
-        android:background="#FFFFBB33"
-        android:contentDescription="@string/app_name" />
+<!--    <ImageView-->
+<!--        android:src="@drawable/ic_launcher_foreground"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="64dp"-->
+<!--        android:scaleType="center"-->
+<!--        android:background="#FFFFBB33"-->
+<!--        android:contentDescription="@string/app_name"-->
+<!--        />-->
 
     <TextView
         android:id="@+id/textView2"
