--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,10 @@
         android:name="cmu.sem.fridgely.ui.settings.SettingsFragment"
         android:label="@string/menu_settings"
         tools:layout="@layout/fragment_settings" />
+
+    <fragment
+        android:id="@+id/nav_recipes_search"
+        android:name="cmu.sem.fridgely.ui.searecipes.SeaRecipeFragment"
+        android:label="Recipe Search"
+        tools:layout="@layout/fragment_sea_recipe" />
 </navigation>
