--- a/app/src/main/res/layout/dialog_add_shopping_item.xml
+++ b/app/src/main/res/layout/dialog_add_shopping_item.xml
@@ -15,7 +15,8 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Item name:" />
+        android:text="Item name:"
+        android:paddingLeft="10dp"/>
 
     <EditText
         android:id="@+id/itemTitleEditText"
@@ -23,8 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="4dp"
         android:hint="" />
 
@@ -32,7 +33,8 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Quantity:" />
+        android:text="Quantity:"
+        android:paddingLeft="10dp"/>
 
     <EditText
         android:id="@+id/itemQuantEditText"
@@ -40,8 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
         android:hint=""/>
