Update rate number
1. Create login layout
2. Fix Nullpointerexception for rating number

--- a/app/src/main/res/layout/fragment_shoppinglist.xml
+++ b/app/src/main/res/layout/fragment_shoppinglist.xml
@@ -6,7 +6,7 @@
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swiperefresh"
+        android:id="@+id/shoppinglistswiperefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
