--- a/app/src/main/res/layout/fragment_sea_recipe.xml
+++ b/app/src/main/res/layout/fragment_sea_recipe.xml
@@ -56,7 +56,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Breakfast"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:background="@drawable/baseline_delete_24"/>
 
             <Button
                 android:id="@+id/cuisine_2"
@@ -78,7 +79,7 @@
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Chinese"
+                android:text="Asian"
                 android:textAllCaps="false" />
 
             <Button
@@ -112,5 +113,29 @@
                 android:text="More +"
                 android:textAllCaps="false" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:orientation="horizontal"
+            android:layout_weight="1" >
+
+            <Button
+                android:id="@+id/cuisine_7"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Italian"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/cuisine_8"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="More +"
+                android:textAllCaps="false" />
+        </LinearLayout>
+
     </LinearLayout>
 </FrameLayout>
