--- a/app/src/main/res/layout/recipe_detail_layout.xml
+++ b/app/src/main/res/layout/recipe_detail_layout.xml
@@ -150,5 +150,21 @@
 <!--            app:layout_constraintStart_toStartOf="parent"-->
 <!--            app:layout_constraintTop_toBottomOf="@+id/ingredient_title"/>-->
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+        <RatingBar
+            android:id="@+id/ratethisrecipe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="150dp"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:max="5"
+            app:layout_constraintTop_toBottomOf="@+id/ingredient_list" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
