--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,11 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#008577</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorRed">#FE3939</color>
 
     <color name="swipeoption_green">#36CF8E</color>
     <color name="swipeoption_blue">#3693D0</color>
     <color name="swipeoption_purple">#ff1744</color>
+
+
 </resources>
