--- a/app/src/main/res/layout/fragment_shoppinglist.xml
+++ b/app/src/main/res/layout/fragment_shoppinglist.xml
@@ -13,7 +13,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shopping_list_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:overScrollMode="never"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
