--- a/app/src/main/res/layout/shopping_list_item.xml
+++ b/app/src/main/res/layout/shopping_list_item.xml
@@ -35,7 +35,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/ic_mode_edit_black_24dp"
+                    app:srcCompat="@drawable/ic_mode_edit_black_24dp"
                     android:tint="@android:color/white"/>
 
                 <TextView
