--- a/app/src/main/res/layout/fragment_sea_recipe.xml
+++ b/app/src/main/res/layout/fragment_sea_recipe.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
+            android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/search_view">
 
@@ -70,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
+            android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@id/cuisine_1_card"
             app:layout_constraintTop_toBottomOf="@id/search_view">
@@ -110,6 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
+            android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cuisine_1_card">
 
@@ -148,6 +151,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
+            android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintLeft_toRightOf="@+id/cuisine_3_card"
             app:layout_constraintTop_toBottomOf="@id/cuisine_2_card">
 
@@ -186,6 +190,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
+            android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cuisine_3_card">
 
@@ -224,7 +229,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintLeft_toRightOf="@id/cuisine_5_card"
             app:layout_constraintTop_toBottomOf="@id/cuisine_4_card">
 
