--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/nav_bg"
+    android:background="@color/colorMenu"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -29,6 +29,10 @@
         android:text="user name"
         android:textSize="20dp"
         android:textColor="@color/colorBlack"
+        android:shadowDx="3"
+        android:shadowDy="3"
+        android:shadowRadius="2"
+        android:shadowColor="@color/colorTextShadow"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
