--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#008577</color>
+    <color name="colorPrimary">#f18290</color>
+    <color name="colorPrimaryDark">#A6C6CD</color>
+    <color name="colorAccent">#f18290</color>
     <color name="colorBlack">#000000</color>
     <color name="colorRed">#FE3939</color>
+    <color name="colorMenu">#C3E9F1</color>
+    <color name="colorTextShadow">#808080</color>
 
     <color name="swipeoption_green">#36CF8E</color>
     <color name="swipeoption_blue">#3693D0</color>
