Add shimmer effect and complete rating feature
1. Adjust bouncing effect scale
2. Implement shimmering effect for recipe loading
3. Users can now submit the rate number for each recipe!

--- a/app/src/main/res/layout/recipe_detail_layout.xml
+++ b/app/src/main/res/layout/recipe_detail_layout.xml
@@ -135,7 +135,8 @@
             android:scrollbars="none"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ingredient_title" />
+            app:layout_constraintTop_toBottomOf="@+id/ingredient_title"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
