--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -6,6 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_recipe_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:shimmer_duration="900"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <include layout="@layout/recipe_list_item"/>
+            <include layout="@layout/recipe_list_item"/>
+            <include layout="@layout/recipe_list_item"/>
+            <include layout="@layout/recipe_list_item"/>
+            <include layout="@layout/recipe_list_item"/>
+            <include layout="@layout/recipe_list_item"/>
+            <include layout="@layout/recipe_list_item"/>
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
